Fix profile button not visible on narrow phone
- Adjust the size of header and size of icon in narrow phone
- Adjust the padding and margin to fit the size of header in mobile

--- a/src/Components/Tournaments/styles.module.scss
+++ b/src/Components/Tournaments/styles.module.scss
@@ -1,7 +1,11 @@
 // TOURNAMENT PANEL COMPONENT
 #game-screen {
     position: relative;
-    padding: 6rem 0;
+    padding: 5rem 0;
+
+    @include media-min($xs) {
+        padding: 6rem 0;
+    }
 
     .prize-info-wrapper {
         min-height: 5rem;
