--- a/src/Global.scss
+++ b/src/Global.scss
@@ -183,8 +183,12 @@ html {
     position: fixed;
     z-index: 5;
     top: 0;
-    height: 70px;
-    max-height: 70px;
+    height: 60px;
+    max-height: 60px;
+    @include media-min($xs) {
+        height: 70px;
+        max-height: 70px;
+    }
     @supports not ((-webkit-backdrop-filter: none) or (backdrop-filter: none)) {
         background-color: rgba(138, 138, 138, 0.3);
     }
@@ -196,7 +200,10 @@ html {
     width: 100vw;
     .logo {
         align-self: center;
-        width: 10rem;
+        width: 7rem;
+        @include media-min($xs) {
+            width: 10rem;
+        }
     }
     .nav-items {
         height: inherit;
@@ -222,9 +229,9 @@ html {
         img {
             border: 2px solid #393939;
             border-radius: 100%;
-            width: 36px;
-            height: 36px;
-            @include media-min($lg) {
+            width: 30px;
+            height: 30px;
+            @include media-min($xs) {
                 width: 40px;
                 height: 40px;
             }
@@ -239,8 +246,12 @@ html {
         display: flex;
         align-items: center;
         justify-content: space-between;
-        min-height: 40px;
-        min-width: 105px;
+        min-height: 30px;
+        min-width: 80px;
+        @include media-min($xs) {
+            min-height: 40px;
+            min-width: 105px;
+        }
         padding: 0 0.8rem;
         background: #555555;
         border-radius: 20px;
@@ -268,13 +279,13 @@ html {
             }
         }
         .icon {
-            width: 18px;
+            width: 16px;
             @include media-min($lg) {
                 width: 24px;
             }
         }
         .add-icon {
-            width: 18px;
+            width: 16px;
             @include media-min($lg) {
                 width: 22px;
             }
@@ -284,8 +295,8 @@ html {
         background: #555555;
         border-radius: 100%;
         position: relative;
-        width: 36px;
-        height: 36px;
+        width: 30px;
+        height: 30px;
         @include media-min($lg) {
             width: 40px;
             height: 40px;
@@ -1316,9 +1327,9 @@ html {
             z-index: 2;
         }
         width: 100%;
-        
+
         // Check is mobile
-        @media (pointer:none), (pointer:coarse) {
+        @media (pointer: none), (pointer: coarse) {
             top: 3rem;
         }
 
@@ -1361,7 +1372,11 @@ html {
                     position: relative;
                     width: 100%;
                     min-height: 12rem;
-                    background: linear-gradient(90deg,#38303d 0%,#1c181f 100%);
+                    background: linear-gradient(
+                        90deg,
+                        #38303d 0%,
+                        #1c181f 100%
+                    );
                     box-shadow: 0px 3px 6px #00000029;
                     border-radius: 10px;
 
@@ -1469,7 +1484,7 @@ html {
                         color: white;
                         box-shadow: inset 0px 3px 6px #0000000f;
                         border-radius: 7px;
-                        
+
                         &:hover {
                             background: #f20086;
                         }
@@ -1819,47 +1834,44 @@ html {
     }
 }
 
-.game-pause-panel{
-    background: linear-gradient(90deg,#38303d 0%,#1c181f 100%);
+.game-pause-panel {
+    background: linear-gradient(90deg, #38303d 0%, #1c181f 100%);
     box-shadow: 0px 3px 6px #00000029;
     border-radius: 10px;
     padding: 0.7em;
     width: 60rem;
 
-    .panel-title{
+    .panel-title {
         font-size: $fnt-sz-30;
         font-weight: $fnt-wgt-700;
-        color: #FDF0F1;
-        
+        color: #fdf0f1;
     }
 
-    .game-time-text 
-    {
+    .game-time-text {
         font-size: $fnt-sz-12;
         font-weight: $fnt-wgt-600;
-        color: #FDF0F1;
+        color: #fdf0f1;
         @include media-min($md) {
             font-size: $fnt-sz-16;
         }
     }
 
-    .resume-button{
+    .resume-button {
         width: 100%;
         max-width: 25rem;
         font-weight: $fnt-wgt-600;
-        font-size: $fnt-sz-26;  
+        font-size: $fnt-sz-26;
         background: #ff3399;
         color: white;
         box-shadow: inset 0px 3px 6px #0000000f;
         border-radius: 10px;
-       
     }
 
-    .quit-button{
+    .quit-button {
         width: 100%;
         max-width: 25rem;
         font-weight: $fnt-wgt-600;
-        font-size: $fnt-sz-26;  
+        font-size: $fnt-sz-26;
         background: #101010;
         color: white;
         box-shadow: inset 0px 3px 6px #0000000f;
@@ -1870,12 +1882,12 @@ html {
         opacity: 0.5;
     }
 
-    .bottom-buttons-container{
+    .bottom-buttons-container {
         width: 100%;
         max-width: 25rem;
         // background: #433848;
         border-radius: 10px;
-        max-height:100px;
+        max-height: 100px;
         font-size: $fnt-sz-12;
         font-weight: $fnt-wgt-600;
         color: #ff3399;
@@ -1886,60 +1898,56 @@ html {
             }
             cursor: pointer;
         }
-        
+
         @include media-min($xs) {
             font-size: $fnt-sz-14;
-            
         }
         @include media-min($md) {
             font-size: $fnt-sz-16;
         }
 
-        span{
+        span {
             text-decoration: underline;
-
         }
-        span:hover{
+        span:hover {
             cursor: pointer;
         }
     }
 }
 
-.game-quit-panel{
-    background: linear-gradient(90deg,#38303d 0%,#1c181f 100%);
+.game-quit-panel {
+    background: linear-gradient(90deg, #38303d 0%, #1c181f 100%);
     box-shadow: 0px 3px 6px #00000029;
     border-radius: 10px;
     padding: 0.7em;
     width: 60rem;
 
-    .panel-title{
+    .panel-title {
         font-size: $fnt-sz-30;
         font-weight: $fnt-wgt-700;
     }
 
-    .game-warning-text 
-    {
+    .game-warning-text {
         font-size: $fnt-sz-18;
         font-weight: $fnt-wgt-600;
-        color: #FDF0F1;
+        color: #fdf0f1;
     }
 
-    .yes-button{
+    .yes-button {
         width: 100%;
         max-width: 25rem;
         font-weight: $fnt-wgt-600;
-        font-size: $fnt-sz-26;  
+        font-size: $fnt-sz-26;
         color: white;
         box-shadow: inset 0px 3px 6px #0000000f;
         border-radius: 10px;
-       
     }
 
-    .cancel-button{
+    .cancel-button {
         width: 100%;
         max-width: 25rem;
         font-weight: $fnt-wgt-600;
-        font-size: $fnt-sz-26;  
+        font-size: $fnt-sz-26;
         background: #101010;
         color: white;
         box-shadow: inset 0px 3px 6px #0000000f;
@@ -1950,12 +1958,12 @@ html {
         opacity: 0.5;
     }
 
-    .bottom-buttons-container{
+    .bottom-buttons-container {
         width: 100%;
         max-width: 25rem;
         // background: #433848;
         border-radius: 10px;
-        max-height:100px;
+        max-height: 100px;
         font-size: $fnt-sz-12;
         font-weight: $fnt-wgt-600;
         color: #ff3399;
@@ -1966,27 +1974,20 @@ html {
             }
             cursor: pointer;
         }
-        
+
         @include media-min($xs) {
             font-size: $fnt-sz-16;
-            
         }
         @include media-min($xl) {
             font-size: $fnt-sz-18;
         }
-        span{
+        span {
             text-decoration: underline;
-
         }
-        span:hover{
+        span:hover {
             cursor: pointer;
         }
     }
 }
-
-
-
-   
-  
 
 @import "./assets/css/all";
